@@ -1,3 +1,8 @@
+2006-08-21  Peter Bloomfield  <peterbloomfield@bellsouth.net>
+
+	* gmime/gmime-utils.c (g_mime_utils_unquote_string): handle an
+	arbitrary sequence of quoted and unquoted sections.
+
 2006-08-02  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
